tests/cases/match/errors/match-range-pattern-order.ari
fn main() -> i64 {
  return match 4 {
    5..=1 => 10,
    _ => 0,
  };
}
